# quanta-wallet

./: .gitignore  BUILD.md  Cargo.toml  README.md  test-dapp.html
public/: api.js  background.js  content.js  diagnostic.js  manifest.json  popup-debug.html  popup.html  popup.js  styles.css
src/: crypto.rs  main.rs  mnemonic.rs  rpc.rs  signing.rs  storage.rs  types.rs  wallet.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
