[package]
name = "quanta-wallet"
version = "0.1.0"
edition = "2021"
authors = ["QUANTA Team"]
description = "Quantum-safe wallet for QUANTA blockchain"
license = "MIT"

[[bin]]
name = "quanta-wallet"
path = "src/main.rs"

[dependencies]
# Cryptography
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
sha3 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"

# Async & Network
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = "0.4"

# Random
rand = "0.8"
dirs = "6.0.0"
rpassword = "7.4.0"
